Add matches counter Add time start and stop

--- a/css/app.css
+++ b/css/app.css
@@ -88,7 +88,7 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 500px;
     margin-bottom: 10px;
 }
 
@@ -107,4 +107,8 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+.matches {
+  margin: 0 20px;
 }
