--- a/css/app.css
+++ b/css/app.css
@@ -40,7 +40,7 @@ h1 {
 .deck {
     width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    background: radial-gradient(rgba(0,0,0,1) 30%, rgba(255,255,255,0));
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
@@ -68,7 +68,7 @@ h1 {
 
 .deck .card.open {
     transform: rotateY(180deg);
-    background: #02b3e4;
+    background: #017bc1;
     cursor: default;
 }
 
@@ -78,11 +78,13 @@ h1 {
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: #017bc1;
+    border: 2px solid #af2626;
 }
 
 .fas {
   transition: transform 0.5s;
+  text-shadow: -3px 3px 10px #000000;
 }
 
 .fas.match {
