--- a/css/app.css
+++ b/css/app.css
@@ -23,18 +23,17 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 10px auto;
     max-width: 960px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 2px solid orange;
 }
 
 header {
   text-align: center;
-  border: 2px solid red;
+  margin: 0 0 10px 0;
 }
 
 h1 {
@@ -50,7 +49,7 @@ h1 {
 
     /*min-height: 680px;*/
     background: radial-gradient(rgba(0,0,0,1) 20%, rgba(255,255,255,0));
-    padding: 0;
+    padding: 10px 0;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
@@ -111,19 +110,40 @@ h1 {
     flex-flow: row wrap;
     justify-content: space-around;
     margin-bottom: 10px;
-    border: 2px solid green;
+    font-family: 'Inconsolata', monospace;
 }
 
 .score-panel .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
-    margin: 0 5px 0 0;
+    margin: 0 5px 10px 0;
 }
 
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+}
+
+.moves,
+.matches,
+.time {
+  text-align: left;
+}
+
+.score-text {
+
+}
+
+.score-value {
+  float: right;
+  text-align: right;
+  display: inline-block;
+  width: 20px;
+}
+
+.time .score-value {
+  width: 110px;
 }
 
 .score-panel .restart {
