--- a/css/app.css
+++ b/css/app.css
@@ -146,11 +146,7 @@ h1 {
   width: 110px;
 }
 
-.score-panel .restart {
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-.matches {
-  margin: 0 20px;
+.btn {
+  padding: 0 10px;
+  border-radius: 5px;
 }
