--- a/css/app.css
+++ b/css/app.css
@@ -29,6 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 header {
@@ -154,4 +155,35 @@ h1 {
 .btn {
   padding: 0 10px;
   border-radius: 5px;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  animation: open-modal 1s;
+}
+
+@keyframes open-modal {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+/*
+.modal-show {
+  display: block;
+}
+*/
+.modal-content {
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 100px;
+  width: 300px;
+  height: 400px;
+  background: rgba(235, 235, 235, 0.8);
+  border-radius: 20px;
+  box-shadow: 5px 2px 20px #000);
 }
