--- a/css/app.css
+++ b/css/app.css
@@ -139,6 +139,7 @@ h1 {
 .matches,
 .time {
   text-align: left;
+  margin: 0 0 5px 0;
 }
 
 .score-value {
@@ -153,8 +154,9 @@ h1 {
 }
 
 .btn {
-  padding: 0 10px;
+  padding: 5px;
   border-radius: 5px;
+  margin: 0 0 10px 0;
 }
 
 .modal {
@@ -162,7 +164,7 @@ h1 {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
   z-index: 1;
   animation: open-modal 1s;
 }
@@ -180,10 +182,55 @@ h1 {
   position: absolute;
   transform: translateX(-50%);
   left: 50%;
-  top: 100px;
+  top: 40px;
   width: 300px;
-  height: 400px;
-  background: rgba(235, 235, 235, 0.8);
+  height: 300px;
+  background: rgba(235, 235, 235, 0.9);
   border-radius: 20px;
-  box-shadow: 5px 2px 20px #000);
+  border: 1px solid green;
+  text-align: center;
+}
+
+.modal-header {
+  height: 10px;
+  text-align: right;
+}
+
+.close-btn {
+  border: none;
+  font-size: 1.8em;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 3px;
+  right: 15px;
+}
+
+.modal-main {
+
+}
+
+.modal-content h1 {
+  margin: 15px 0 5px 0;
+}
+
+.modal-score {
+  flex-flow: column;
+  align-items: center;
+  font-size: 1.5em;
+}
+
+.modal-score .time .score-value {
+  width: 180px;
+}
+
+.modal-content .btn {
+  font-size: 0.8em;
+  margin: 10px 0 0 0;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px;
+}
+
+.modal-score * {
+  /*border: 1px solid red;*/
 }
