--- a/css/app.css
+++ b/css/app.css
@@ -43,9 +43,7 @@ h1 {
     font-weight: 300;
 }
 
-/*
- * Styles for the deck of cards
- */
+/******** Styles for the deck of cards ********/
 
 .deck {
 
@@ -101,9 +99,7 @@ h1 {
     transform: rotateZ(1080deg);
 }
 
-/*
- * Styles for the Score Panel
- */
+/******* Styles for the Score Panel ********/
 
 .score-panel {
     width: 100%;
@@ -159,6 +155,8 @@ h1 {
   border-radius: 5px;
   margin: 0 0 10px 0;
 }
+
+/******** Styles for modal ********/
 
 .modal {
   display: none;
